# GitHub-Stars-AI-Tools

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: release.yml
apps/desktop/: DESIGN.md  components.json  index.html  package.json  vite.config.ts
apps/desktop/scripts/: normalize-updater-manifest.mjs  normalize-updater-manifest.test.mjs  package-dmg.mjs  prepare-native-runtime.mjs  verify-auth-data-flow.mjs  verify-auth-flow.mjs  verify-backup-flow.mjs  verify-recommendation-flow.mjs  verify-rust-tests.mjs  verify-settings-flow.mjs  verify-sync-resilience.mjs  verify-task-feedback.mjs  verify-ui-constraints.mjs  verify-view-ai-ui.mjs  verify-virtual-list.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css  types-settings.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: gsat-commands.toml
apps/desktop/src-tauri/src/: ai.rs  auth.rs  embedding.rs  embedding_state.rs  github.rs  lib.rs  main.rs  ranking_query.rs  storage.rs  vector_index.rs
apps/desktop/src/components/: app-layout.tsx  app-shell.tsx  app-title-bar.tsx  app-update-panel.tsx  copy-link-button.tsx  readme-renderer.tsx  settings-panel.tsx  vertical-resize-handle.tsx  welcome-flow.tsx
apps/desktop/src/components/ui/: badge.tsx  brand-icon.tsx  input.tsx
apps/desktop/src/features/discovery/: recommendation-list.tsx
apps/desktop/src/features/knowledge/: knowledge-panel.tsx
apps/desktop/src/features/rankings/: ranking-detail-panel.tsx  rankings-workspace.tsx
apps/desktop/src/features/repositories/: repository-filter-bar.tsx  repository-table.tsx
apps/desktop/src/features/sidebar/: connection-panel.tsx  sync-panel.tsx  system-panel.tsx
apps/desktop/src/hooks/: use-settings.ts  use-stars-workspace.ts
apps/desktop/src/lib/: ai-config.test.ts  ai-config.ts  ai-search-response.test.ts  ai-search-response.ts  format.ts  repository.ts  virtual-list.ts
apps/desktop/src/pages/: ai-search.tsx  dashboard.tsx  discover.tsx  profile.tsx  rankings.tsx  repositories.tsx  settings.tsx  tag-network.tsx
apps/desktop/src/providers/: app-update-provider.tsx  settings-provider.tsx  workspace-provider.tsx
apps/desktop/src/styles/: design-system.css
docs/: CHANGELOG-2026-07-05.md  REFACTOR-SPEC.md  phase2-complete.md  phase3-complete.md  release.md
docs/analysis/: module-inventory.md  project-overview.md  search-quality-audit.md
docs/licenses/: embedding-runtime.md
docs/plan/: architecture-spec.md  dependency-graph.md  local-embedding-v1.md  milestones.md  product-spec.md  task-breakdown.md  vector-search-implementation.md  zvec-vector-roadmap.md
docs/progress/: MASTER.md  phase-10-vector-search.md  phase-11-local-embedding.md
docs/quality/: embedding-golden.json
docs/releases/: v0.1.0.md  v1.0.0.md  v1.0.1.md  v1.1.2.md  v1.2.0.md  v1.3.0.md  v1.5.0.md
scripts/: verify-mvp.mjs  verify-no-empty-implementations.mjs  verify-tauri-release-config.mjs
skills/incremental-implementation/: SKILL.md
tasks/: plan.md  todo.md
