[package]
name = "gsat-desktop"
version = "0.1.0"
description = "本地优先的 GitHub-Stars-AI-Tools 桌面应用"
authors = ["xingranya"]
edition = "2021"

[lib]
name = "gsat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
